# rustysecrets-node

./: .travis.yml  CHANGELOG.md  README.md  package-lock.json  package.json
examples/: wrapped.js
lib/: index.js  native.js
native/: Cargo.toml
native/src/: dss.rs  lib.rs  sss.rs  util.rs  wrapped.rs
platform/: linux_x64.node  linux_x64_electron.node
test/: sss.js  wrapped.js
