[package]
name = "rustysecrets-node"
version = "0.2.0"
authors = ["Romain Ruetschi <romain.ruetschi@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "rustysecrets_node"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.22"

[dependencies]
neon = "^0.1.22"
base64 = "^0.9.0"
protobuf = "^2.6.0"
rusty_secrets = "=0.2.1"
